# Mtm2020SpringGraphCalc

./: .gitignore  .gitmodules  BinTree.cpp  BinTree.h  CalcRunner.cpp  CalcRunner.h  Constants.h  Exceptions.cpp  Exceptions.h  Graph.cpp  Graph.h  Graph.i  GraphCalc.cpp  GraphCalc.h  GraphCalcProjStructure.html  GraphCalcProjStructure.md  GraphSwig.cpp  GraphSwig.h  Main.cpp  Makefile  Mtm2020SpringGraphCalc.code-workspace  Parser.cpp  Parser.h  README.md  StorageManager.cpp  StorageManager.h  TreeRunner.cpp  TreeRunner.h  Utils.cpp  Utils.h  graph.i  swig_it.sh  test_in.txt  test_out.txt  testin.txt
unittests/: CMakeLists.txt  FullCalcTests.cpp  GraphTests.cpp  ParserTests.cpp  TestRunner.cpp
